Updated the help page and altered some of the index code

--- a/help.html
+++ b/help.html
@@ -38,8 +38,20 @@
             <p>This is a simple memory based game. It will present a few different minigames with different aspects which present a memory based retention theme. This is part of my course project for the second milestone.</p>
         </details>
         <details>
+            <summary><b>Tools and Equipment</b></summary>
+            <p>In this game you have three peices of equipment that will help you on your adventures. The three items are; <br><br><b>Pocket Scanner</b> - this nifty little device will help you locate within the terrain any areas of interst, this is where you may be able to find some rare and interesting items like fossils and geodes. This item can be upgraded with gold ore and will open more biomes and locations for you to explore.<br><b>Pickaxe and Shovel</b> - these are the tools that will help you dig up on the map, these will decrease your q and e sequences when upgraded. These tools are both upgraded with iron ore.</p>
+        </details>
+        <details>
             <summary><b>Biomes</b></summary>
             <p>There are sevel different biomes within the game that are unlocked when you upgrade your pocket scanner. This will mean that you can find other biomes that have different item layouts and chances. In the game there are 10 biome types.<br><br><b>Plains</b> - this is the original biome on which you will probably spend some time, this has a basic general item chance.<br><b>Desert</b> - within this biome fossils have a higher chance of being obtained when you select locations of interest.<br><b>Forest</b> - within this biome you have a higher chance of obtaining certain gems and some ore types.<br><b>Swamp</b> - within this biome you have a higher chance of obtaining certain gems and some ore types.<br><b>Mountain</b> - within this biome you have an increased chance of obtaining emeralds and a small chance of geodes.<br><b>Taiga</b> - within this biome you are able to obtain fossils and geodes at equal chance.<br><b>Jungle</b> - within this biome you are able to obtain geodes and ores.<br><b>Red Desert, Savannah and Marsh</b> - these are extra biomes with the ability to obtain extensive ores and fossils.</p>
+        </details>
+        <details>
+            <summary><b>Recovering Fossils and Geodes</b></summary>
+            <p>Within this game your purpose is to go and have fun playing a series of memory based games and be rewarded whilst playing with a series of items. Depending on how well you play each of the mini-games depends on how well the geodes and fossils are recovered. There is a quality feature to each item. The quality of the item depends on the results from the mini-game. It is an overal 100% marker to display success. Each of the recovered items can be seen in the museum after you have recovered them. Quality is made up of two 50%'s and is an average of both the recovery mini-game in the museum and the mini-game where you dig them up!</p>
+        </details>
+        <details>
+            <summary><b>Items</b></summary>
+            <p>There are some items within the game are are not very rare and will not be excepted by the museum.<br><b>Dirt, Stone, Copper ore and Sand</b> - these are the basic and unrare items that you will find whilst you are digging up locations that are unmarked or without a point of interest. <br><b>Gold ore and Iron ore</b> - these items are medium in rarity and are not excepted by the museum but are able to be used by A.L.P.H to upgrade your pocket scanner and your tools. <br><b>Lapis Lazuli and Amber</b> - this is the items on which are found from locations of interst that are really valuable but are not accepted by the museum. <br><br> These are items that are all accepted by the museum.<br><b>Gems, Geodes and Fossils</b> - these are found in the world in different rarities. These are all accepted in the museum.</p>
         </details>
     </main>
 </body>
