--- a/index.html
+++ b/index.html
@@ -359,8 +359,10 @@
                         removeItemFromInventory(currentProcessItem[0], currentProcessItem[1]);
                         chosenMenuOption = -1;
                         sequenceLength = range(5+usersToolbelt[0]-usersToolbelt[3], 3, 12);
-                        textbox.innerHTML = textbox.innerHTML+""+usersInventory
-                        // gameState = gameStates.M_BEGIN_SEQUENCE;
+                        textbox.innerHTML = textbox.innerHTML+""+sequenceLength
+                        if (currentProcessItem != [] && sequenceLength > 0) {
+                            // gameState = gameStates.M_BEGIN_SEQUENCE;
+                        }
                     }
                 }
 
@@ -490,7 +492,7 @@
                 if (gameState == gameStates.BEGIN_SEQUENCE || gameState == gameStates.M_BEGIN_SEQUENCE) {
                     if (sequenceDisplayTime > 0) {
                         // This is to show the sequence for a set amount of time.
-                        textbox.innerHTML = textbox.innerHTML+"<br>"+randomSequence
+                        textbox.innerHTML = textbox.innerHTML+"<br><br>"+randomSequence
                         sequenceDisplayTime -= 1
                     } else if (sequenceDisplayTime == 0) {
                         if (gameState == gameStates.BEGIN_SEQUENCE) {
@@ -503,7 +505,7 @@
 
                 if (usersSequence.length > 0) {
                     // Adds the users sequence to the texbox output if the sequence has a length.
-                    textbox.innerHTML = textbox.innerHTML+"<br>"+usersSequence
+                    textbox.innerHTML = textbox.innerHTML+"<br><br>"+usersSequence
                 }
                 
                 if (usersSequence.length == randomSequence.length && usersSequence.length > 0) {
@@ -589,24 +591,35 @@
             function removeItemFromInventory(item, quantity) {
                 // Check if the user has got the item and the item is not common and then remove the item depending on how much of the item I am after removing. If the item is uncommon then remove the item from the inventory.
                 let temp_boolean = false;
-                if (usersInventory.includes(item) && commonItems.includes(item)) {
+                let i;
+                if (usersInventory.includes(item)) {
                     for (i = 0; i < usersInventory.length; i = i+2) {
-                        if (usersInventory[i] == item && usersInventory[i+1] > quantity) {
+                        if (temp_boolean == false && usersInventory[i] == item && usersInventory[i+1] > quantity && commomItems.indexOf(item) > -1) {
                             usersInventory[i+1] = usersInventory[i+1]-quantity;
-                        } else if (usersInventory[i] == item && usersInventory[i+1] == quantity) {
-                            usersInventory.splice(i, 2);
-                        }
-                    }
-                } else if (usersInventory.includes(item) && commonItems.indexOf(item) == -1) {
-                    for (i = 0; i < usersInventory.length; i = i+2) {
-                        if (usersInventory[i] == item && usersInventory[i+1] == quantity && temp_boolean == false) {
-                            usersInventory.splice(i, 2);
                             temp_boolean = true;
+                        } else if (temp_boolean == false && usersInventory[i] == item && usersInventory[i+1] == quantity) {
+                            usersInventory.splice(i, 2)
                         }
                     }
-                } else {
-                    return false
                 }
+                // if (usersInventory.includes(item) && commonItems.includes(item)) {
+                //     for (i = 0; i < usersInventory.length; i = i+2) {
+                //         if (usersInventory[i] == item && usersInventory[i+1] > quantity) {
+                //             usersInventory[i+1] = usersInventory[i+1]-quantity;
+                //         } else if (usersInventory[i] == item && usersInventory[i+1] == quantity) {
+                //             usersInventory.splice(i, 2);
+                //         }
+                //     }
+                // } else if (usersInventory.includes(item) && commonItems.indexOf(item) == -1) {
+                //     for (i = 0; i < usersInventory.length; i = i+2) {
+                //         if (usersInventory[i] == item && usersInventory[i+1] == quantity && temp_boolean == false) {
+                //             usersInventory.splice(i, 2);
+                //             temp_boolean = true;
+                //         }
+                //     }
+                // } else {
+                //     return false
+                // }
             }
 
             function checkPos(x, y, arrayB, sizeX, sizeY) {
