Ran the JS though a checker and also externalised all the different language files

--- a/help.html
+++ b/help.html
@@ -5,26 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dig UP! HELP!</title>
 
-    <style>
-        body {
-            overflow-x: hidden;
-            font-family: "Courier new", "Cambria";
-            margin: 20px;
-            user-select: none;
-        }
-
-        header {
-            text-align: center;
-        }
-
-        main {
-            padding: 20px;
-        }
-
-        details {
-            padding: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
     <header>
