Update the README file

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             <span>Archeology-base memory game.</span>
         </header>
         <main>
-            <section>
+            <div>
                 <p id="textbox">Test Text</p>
                 <br>
                 <canvas id="display">This element is unsupported.</canvas>
-            </section>
+            </div>
         </main>
         <footer>
             <span>Are you having trouble with this game? I have made a quick peice of information to assit you on your digging. <a target="_blank" href="help.html">Click here.</a></span>
