Seperated CSS styles to fix CSS styling on help page

--- a/help.html
+++ b/help.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dig UP! HELP!</title>
 
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/help_stylesheet.css">
 </head>
 <body>
     <header>
