--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Dig UP!</title>
         
-        <link rel="stylesheet" href="assets/css/main.css">
+        <link rel="stylesheet" href="assets/css/index_stylesheet.css">
     </head>
     <body onload="init();" onkeydown="KeyDown(event)" onmousedown="MouseDown()" onmousemove="MouseMove(event);">
         <header>
